# Micro-Nuculei-and-Nuclear-Buds-Detection

./: LICENSE  README.md  launch_napari.py  pyproject.toml  setup.cfg  setup.py
micro_nuculei_nuclear_buds_detection/: __init__.py  _constants.py  _data_management_widget.py  _nuclei_segmentation_widget.py  _postprocessing.py  _widget.py  launch_napari.py  napari.yaml
tests/: __init__.py  conftest.py  test_constants.py  test_data_management.py  test_nuclei_segmentation.py  test_plugin_discovery.py  test_postprocessing.py
