[metadata]
name = micro-nuculei-nuclear-buds-detection
version = 0.2.0
description = A napari plugin for detecting micro-nuclei and nuclear buds in biological images
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    napari-plugin-engine>=0.2.0
    qtpy
    numpy
    scikit-image
    cellpose==3.1.1.1

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.yaml, *.yml

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-qt
    black
    flake8
    mypy

[options.entry_points]
napari.manifest =
    micro-nuculei-nuclear-buds-detection = micro_nuculei_nuclear_buds_detection:napari.yaml

console_scripts =
    mb-detect = micro_nuculei_nuclear_buds_detection.launch_napari:main
